    Support alternate text encodings in SWF 5 and earlier.

2009-11-29 release 0.3.0
    Fix compile error with GCC 4.4 due to inconsistent constancy
    Support for colormap in DefineBitsLossless (thanks to MURAOKA Daisuke)
    Don't refer to SWF as 'Shockwave Flash'
    Don't require bash for XML test cases
    Change bug report location to Launchpad
    Map objectID, sprite and fontRef attributes in simple format
    Fix writing floats
    correctly count frames for <clip>s (thanks to Alex Midgley)
    Support scale and skew in simple format
    Add "ShiftedRadialGradient" fill style, supported by Flash 8 and later
    Fix SVG import segfault (thanks to Ralf Fuest)
    Fix TTF import for some fonts (Ralf)
    Bitmap filter effects on Buttons (Ralf)
    Preserve isSetup in TextRecords (Ralf)
    Fix wrong list length in LineStyle, ConvolutionFilter, ColorMatrix (Ralf)
    Support spread- and interpolationMode in Gradients (Ralf)
    Fix wrong GradientItem count (Ralf)
    Fix empty name attributes generated by place tag (Ralf)
    Show warning when reaching EOF while reading SWF (Ralf)
    Support importing multiple SVGs (breaking change) (Ralf)
    New 'export' attribute to export only some SVG elements (Ralf)
    Far improved SVG import (Ralf)
    Add DoABC, DoDefineABC, SymbolClass and DefineBinaryData (Ralf)
    New 'binary' tag to import arbitrary binary data in simple mode (Ralf)
    Improve calculation of bounding box of stroked shapes (Ralf)
    Fix incorrect flag order in DeclareFunction2 (Ralf)
    Add DefineFontName (Ralf)
    Support mono MP3s (Ralf)
    Fix incorrect flag order in TextRecords
    Add include tag to simple mode (Ralf)
    Support AS3 movies (Ralf)
    Correct size calculation of pascalU30 strings
    Support '-h' command line option for help
    Fix numerous memory leaks (thanks to INADA Naoki)
    Add OpDebugReg opcode
    Improve MP3 import error messages (Ralf)
    Use DefineFont3 when importing TTFs for Flash 8 and above (Ralf)