@@ -6,4 +6,5 @@ It is maintained by Daniel Cassidy <mail@danielcassidy.me.uk>.
 Contributors (in chronological order):
 Herman Narkaytis, Steve Webster, Juan José Silveira, Gerrit Karius,
 Kazuaki MATSUHASHI, Lars Bonde, Alex Midgley, Jey, Ralf Fuest, INADA Naoki,
-Arthur Chan, Paul Colomiets, Robin Palotai, Benjamin Wolsey, MURAOKA Daisuke.
+Arthur Chan, Paul Colomiets, Robin Palotai, Benjamin Wolsey, MURAOKA Daisuke,
+Piers Haken.
